--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -298,11 +298,13 @@ img {
 .skills__grp {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
   gap: 10px; /* Adjust the gap between grid items as needed */
+  justify-items: center;
 }
 
 .skills__data {
+  width: 20rem;
   display: flex;
   flex-direction: column;
   align-items: space-between;
@@ -547,5 +549,33 @@ img {
   }
   .home__img {
     width: 450px;
+  }
+}
+
+/* Add this CSS for mobile navigation */
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    top: var(--header-height);
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+    background-color: var(--second-color);
+    transition: 0.5s;
+  }
+
+  .nav__toggle {
+    display: block;
+  }
+
+  .nav__list {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .nav__item {
+    margin-bottom: var(--mb-4);
+    margin-left: 0;
   }
 }
